src/test/ui/nll/maybe-initialized-drop-implicit-fragment-drop.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/maybe-initialized-drop-implicit-fragment-drop.rs:31:5
   |
27 |     let wrap = Wrap { p: &mut x };
   |                          ------ borrow of `x` occurs here
...
31 |     x = 1; //~ ERROR cannot assign to `x` because it is borrowed [E0506]
   |     ^^^^^ assignment to borrowed `x` occurs here

error: aborting due to previous error

